// Copyright (c) Contributors to the SPK project.
// SPDX-License-Identifier: Apache-2.0
// https://github.com/spkenv/spk
syntax = "proto3";

package spfs_vfs;

message ShutdownRequest{}
message ShutdownResponse{}

message MountRequest{
    uint32 root_pid = 1;
    string env_spec = 2;
    // Whether to create an editable mount with scratch directory for writes
    bool editable = 3;
    // Runtime name for scratch directory naming (required if editable)
    string runtime_name = 4;
}
message MountResponse{}

message UnmountRequest{
    uint32 root_pid = 1;
}
message UnmountResponse{
    bool was_mounted = 1;
}

message StatusRequest{}

message MountInfo {
    uint32 root_pid = 1;
    string env_spec = 2;
    bool editable = 3;
    string runtime_name = 4;
}

message StatusResponse {
    uint32 active_mounts = 1;
    repeated MountInfo mounts = 2;
}

service VfsService {
    rpc Mount(MountRequest) returns (MountResponse);
    // unmount an environment for a specific process tree
    rpc Unmount(UnmountRequest) returns (UnmountResponse);
    // shut down the mounted filesystem and all running environments
    rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
    // get service status and active mounts
    rpc Status(StatusRequest) returns (StatusResponse);
}
